--- a/src/widgets/app-header/ui/app-header.module.scss
+++ b/src/widgets/app-header/ui/app-header.module.scss
@@ -11,6 +11,9 @@ $base-border: 1px solid
 	padding-right: var(--mantine-spacing-md);
 	border-radius: var(--mantine-radius-xl);
 	box-shadow: var(--mantine-shadow-sm);
+	position: sticky;
+	top: 20px;
+	z-index: 10;
 }
 
 .group {
