--- a/src/widgets/search-result-list/ui/search.module.scss
+++ b/src/widgets/search-result-list/ui/search.module.scss
@@ -18,3 +18,14 @@
 	width: 100%;
 	height: 100%;
 }
+
+.textCard{
+	align-self: flex-start;
+}
+
+.gradientButton {
+	transition: 0.3s ease;
+	&:hover {
+		filter: brightness(0.9);
+	}
+}
